--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMsAfKR5pYwrK2HbkFu5I8I",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMYIw0kILtW2/MPIiQ1SzD5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,11 +93,11 @@
       "metadata": {
         "id": "BcFALQ8XZ1d5",
         "colab_type": "code",
+        "outputId": "32dba936-d34b-4e4c-d479-d78fa82a81e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
-        },
-        "outputId": "02444c1f-451f-484c-c661-64226083c8d9"
+        }
       },
       "source": [
         "#####\n",
@@ -126,7 +127,7 @@
         "\n",
         "  car_types = links\n"
       ],
-      "execution_count": 12,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,14 +145,15 @@
       "metadata": {
         "id": "-eJWiTngpszd",
         "colab_type": "code",
+        "outputId": "ac4d6c1f-8aaa-45c7-e309-ca4cae0fb289",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 444
-        },
-        "outputId": "5e1a3d1a-78e6-497f-e98a-2dd93c8ebed7"
+          "height": 387
+        }
       },
       "source": [
         "\n",
+        "info = []\n",
         "for j in car_types:\n",
         "  request_url = base_url + j\n",
         "  print('request_url::' + request_url)\n",
@@ -161,50 +163,38 @@
         "  summary_lists = soup.find('div', attrs={'class': 'summary_lists'})\n",
         "  # print('summary_lists::' + str(summary_lists))\n",
         "\n",
-        "  bike_sec = summary_lists.find('div', attrs={'class': 'bike_sec'})\n",
-        "  # print('bike_sec::' + str(bike_sec))\n",
+        "  bike_sec = summary_lists.find_all('div', attrs={'class': 'bike_sec'})\n",
+        "  # print('bike_sec start')\n",
+        "  # print(bike_sec)\n",
+        "  # print('bike_sec end')\n",
         "\n",
-        "  info = []\n",
         "  for b in bike_sec:\n",
-        "    print(info)\n",
-        "\n",
-        "    info = bike_sec.find('div', attrs={'class': 'bike_info'})\n",
-        "    d = {\n",
-        "        'title': info.find('a', attrs={'class': 'detail_kakaku_link'}).text,\\\n",
-        "        'price': info.find('td', attrs={'class':'num_td'}).find('span', attrs={'class': 'num_ff'}).text,\\\n",
-        "        'all_price': info.find('span', attrs={'class': 'num_ff total'}).text,\\\n",
-        "        'years': '',\\\n",
-        "        'mileage': '',\\\n",
-        "        'vehicle inspection/insurance': '',\\\n",
-        "        'Repair history': '',\\\n",
-        "        }\n",
-        "    print(d)\n",
-        "\n",
-        "    info.append(d)\n",
-        "\n",
-        "    # info.append({\n",
-        "                # 'title': info.find('a', attrs={'class': 'detail_kakaku_link'}).text,\\\n",
-        "                # 'price': info.find('td', class='num_td').find('span', class='num_ff').text,\\\n",
-        "                # 'all_price': info.find('td', class='num_ff total').text,\\\n",
-        "                # 'years': '',\\\n",
-        "                # 'mileage': '',\\\n",
-        "                # 'vehicle inspection/insurance': '',\\\n",
-        "                # 'Repair history': '',\\\n",
-        "                #  })\n",
         "    # print(info)\n",
         "\n",
-        "  # bike_sec = soup.find_all('.bike_sec')\n",
+        "    bike_info = bike_sec.find('div', attrs={'class': 'bike_info'})\n",
         "\n",
-        "  # print('bike_sec::' + json.dumps(bike_sec))"
+        "    d = {\n",
+        "        'title': bike_info.find('a', attrs={'class': 'detail_kakaku_link'}).text,\\\n",
+        "        'price': bike_info.find('td', attrs={'class':'num_td'}).find('span', attrs={'class': 'num_ff'}).text,\\\n",
+        "        'all_price': bike_info.find('span', attrs={'class': 'num_ff total'}).text,\\\n",
+        "        'years': bike_info.find('div', attrs={'class': 'cont01'}).find('ul', attrs={'class': 'clearfix'}).find_all('li')[0].b,\\\n",
+        "        'mileage': bike_info.find('div', attrs={'class': 'cont01'}).find('ul', attrs={'class': 'clearfix'}).find_all('li')[1].b,\\\n",
+        "        'vehicle inspection/insurance': bike_info.find('div', attrs={'class': 'cont01'}).find('ul', attrs={'class': 'clearfix'}).find_all('li')[2].b,\\\n",
+        "        'Repair history': bike_info.find('div', attrs={'class': 'cont01'}).find('ul', attrs={'class': 'clearfix'}).find_all('li')[3].b,\\\n",
+        "        'URL' : request_url\n",
+        "        }\n",
+        "    print('put data::' + str(d))\n",
+        "\n",
+        "    info.append(d.copy())\n",
+        "\n",
+        "    del d"
       ],
-      "execution_count": 34,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "request_url::https://www.goobike.com//maker-harley_davidson/car-cvo_flhrse5_roadking/index.html\n",
-            "[]\n",
-            "{'title': 'ＣＶＯ\\u3000ＦＬＨＲＳＥ５\\u3000ロードキング', 'price': '220', 'all_price': '227.8', 'years': '', 'mileage': '', 'vehicle inspection/insurance': '', 'Repair history': ''}\n"
+            "request_url::https://www.goobike.com//maker-harley_davidson/car-cvo_flhrse5_roadking/index.html\n"
           ],
           "name": "stdout"
         },
@@ -215,10 +205,9 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-34-5c61964be114>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m     \u001b[0minfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;31m# info.append({\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/bs4/element.py\u001b[0m in \u001b[0;36mappend\u001b[0;34m(self, tag)\u001b[0m\n\u001b[1;32m    429\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    430\u001b[0m         \u001b[0;34m\"\"\"Appends the given tag to the contents of this tag.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 431\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontents\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    432\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    433\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0minsert_before\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredecessor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/bs4/element.py\u001b[0m in \u001b[0;36minsert\u001b[0;34m(self, position, new_child)\u001b[0m\n\u001b[1;32m    384\u001b[0m             \u001b[0mnew_child\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextract\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    385\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 386\u001b[0;31m         \u001b[0mnew_child\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    387\u001b[0m         \u001b[0mprevious_child\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    388\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mposition\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'parent'"
+            "\u001b[0;32m<ipython-input-62-08989e0e68c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m# print(info)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mbike_info\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbike_sec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'div'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattrs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'class'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'bike_info'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     d = {\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/bs4/element.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1882\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1883\u001b[0m         raise AttributeError(\n\u001b[0;32m-> 1884\u001b[0;31m             \u001b[0;34m\"ResultSet object has no attribute '%s'. You're probably treating a list of items like a single item. Did you call find_all() when you meant to call find()?\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1885\u001b[0m         )\n",
+            "\u001b[0;31mAttributeError\u001b[0m: ResultSet object has no attribute 'find'. You're probably treating a list of items like a single item. Did you call find_all() when you meant to call find()?"
           ]
         }
       ]
@@ -226,12 +215,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2obcycUK9ozH",
+        "id": "Pv2bJIP4P4by",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "import csv\n",
+        "with open(\"goobike.csv\", \"w\") as f:\n",
+        "    writer = csv.writer(f, lineterminator='\\n')\n",
+        "    writer.writerow(info[0].keys())\n",
+        "    for i in info:\n",
+        "        writer.writerow(i.values())"
       ],
       "execution_count": 0,
       "outputs": []
